some changes to the api html

--- a/NMSWiki.WebAPI/Views/Home/Index.cshtml
+++ b/NMSWiki.WebAPI/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1 class="text-danger text-center">No Man's Sky Wiki</h1>
+    <p class="lead text-center">This API provides various features and data about well-known game No Man's Sky.</p>
+    <p class="text-center"><a href="https://www.nomanssky.com/" class="btn btn-primary btn-lg text-center">No Man's Sky' &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
