changed UI of home page

--- a/NMSWiki.WebAPI/Views/Home/Index.cshtml
+++ b/NMSWiki.WebAPI/Views/Home/Index.cshtml
@@ -1,10 +1,26 @@
 ﻿<div class="jumbotron">
     <h1 class="text-danger text-center">No Man's Sky Wiki</h1>
     <p class="lead text-center">This API provides various features and data about well-known game No Man's Sky.</p>
-    <p class="text-center"><a href="https://www.nomanssky.com/" class="btn btn-primary btn-lg text-center">No Man's Sky' &raquo;</a></p>
+    <p class="text-center"><a href="https://www.nomanssky.com/" class="btn btn-primary btn-lg text-center">No Man's Sky &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
+        <h2>Project GitHub</h2>
+        <p>Be sure to check out our GitHub page to see the entire project, it's code, and the README!</p>
+        <p><a class="btn btn-default" href="https://github.com/dkallman13/NoMansSkyWiki">GitHub &rArr;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>API Data</h2>
+        <p>We've conveniently collected all the data to be used for this service in this spreadsheet here...</p>
+        <p><a class="btn btn-default" href="https://docs.google.com/spreadsheets/d/12BYFAg8QmuaLPhLfGN8vxpj2K9V5UqyWv-4NVjPRexw/edit?usp=sharing">Data &rArr;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>SQL Data</h2>
+        <p>It may be a hassle to input all the resource and crafting data into the database, so we have all the SQL commands here...</p>
+        <p><a class="btn btn-default" href="https://docs.google.com/document/d/1viZiElfaHhbdIqj3fFp_44CODjgeIT4db0zToBzdjpI/edit?usp=sharing">Resources &rArr;</a></p>
+        <p><a class="btn btn-default" href="https://docs.google.com/document/d/16d6ryJXmgxLJKuJbqaiv_zp-q_5cZAvp8nPvTAcHs6M/edit?usp=sharing">Craftables &rArr;</a></p>
+    </div>
+    <!--<div class="col-md-4">
         <h2>Getting started</h2>
         <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
         a broad range of clients, including browsers and mobile devices. ASP.NET Web API
@@ -20,5 +36,5 @@
         <h2>Web Hosting</h2>
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
+    </div>-->
 </div>
