changed various ui elements

--- a/NMSWiki.WebAPI/Views/Home/Index.cshtml
+++ b/NMSWiki.WebAPI/Views/Home/Index.cshtml
@@ -17,8 +17,8 @@
     <div class="col-md-4">
         <h2>SQL Data</h2>
         <p>It may be a hassle to input all the resource and crafting data into the database, so we have all the SQL commands here...</p>
-        <p><a class="btn btn-default" href="https://docs.google.com/document/d/1viZiElfaHhbdIqj3fFp_44CODjgeIT4db0zToBzdjpI/edit?usp=sharing">Resources &rArr;</a></p>
-        <p><a class="btn btn-default" href="https://docs.google.com/document/d/16d6ryJXmgxLJKuJbqaiv_zp-q_5cZAvp8nPvTAcHs6M/edit?usp=sharing">Craftables &rArr;</a></p>
+        <p><a class="btn btn-default" href="https://docs.google.com/document/d/1viZiElfaHhbdIqj3fFp_44CODjgeIT4db0zToBzdjpI/edit?usp=sharing">Resources &rArr;</a>
+        <a class="btn btn-default" href="https://docs.google.com/document/d/16d6ryJXmgxLJKuJbqaiv_zp-q_5cZAvp8nPvTAcHs6M/edit?usp=sharing">Craftables &rArr;</a></p>
     </div>
     <!--<div class="col-md-4">
         <h2>Getting started</h2>
@@ -37,4 +37,11 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>-->
+</div>
+<br />
+<div class="row">
+    <div class="col-sm-12">
+        <h5 class="text-center">This API has <b>Swagger</b> functionality.</h5>
+        <h5 class="text-center">type "https://localhost:#####/swagger" into address bar</h5>
+    </div>
 </div>
